test/compiler/pass/if.bt
func if_else_tester(bool flag) -> unit
{
	if (flag) {
		print(true);
	}
	else {
		print(false);
	}
	print(0, "\n");
}
if_else_tester(true);
if_else_tester(false);

int x = 5;

if (x == 5){
  print("\n");
  print(true);
}
