test/compiler/fail/param_type_not_match.bt
func bar(int i, int j) -> unit {
    i = 3;
    print(i);
    print(" by bar\n");
}

bar("hello",2);